<resources>
    <string name="app_name">jME3 Jaime Demo</string>

    <string name="drawer_title">Android Navigation Drawer</string>
    <string-array name="drawer_titles_array">
        <item>Settings</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="pref_display_category_title">Display Items</string>
    <string name="pref_display_fps_title">Display FPS</string>
    <string name="pref_display_fps_key">pref_key_display_fps</string>
    <string name="pref_display_fps_summary">Display the Frame-Per-Second value at all times in the bottom left corner</string>
    <string name="pref_display_stats_title">Display Stats</string>
    <string name="pref_display_stats_key">pref_key_display_stats</string>
    <string name="pref_display_stats_summary">Display the GPU stat values at all times in the bottom left corner</string>
    <string name="pref_max_character_speed_key">pref_key_max_character_speed</string>
    <string name="pref_max_character_speed_title">Max Character Speed (m/s)</string>
    <string name="pref_max_character_speed_summary">Set the maximum speed of the character in m/s</string>
    <string name="pref_character_run_speed_key">pref_key_character_run_speed</string>
    <string name="pref_character_run_speed_title">Character Run Speed (m/s)</string>
    <string name="pref_character_run_speed_summary">Set the speed for the character to start running in m/s</string>

    <string name="title_activity_settings">Settings</string>
    <string name="is_an_invalid_number">is an invalid number.  Must be a numeric value.</string>

</resources>
